[project]
name = "par"
version = "0.1.0"
description = "Parallel repo sessions manager"
authors = [ { name="Victor", email="vimota@gmail.com" } ]
requires-python = ">=3.11"
dependencies = [
    "typer",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest",
    "ruff", 
    "pre-commit",
]

[project.scripts]
par = "par.cli:app"