[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "par-cli"
version = "0.1.0"
description = "Parallel repo sessions manager"
authors = [ { name="Victor", email="vimota@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "typer",
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["par"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "build",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest",
    "ruff",
    "pre-commit",
    "hatchling>=1.27.0",
    "build",
]

[project.scripts]
par = "par.cli:app"
